fixed typo which prevented card image from loading.

--- a/app.css
+++ b/app.css
@@ -62,7 +62,7 @@ h1 {
 }
 
 .front {
-    background-image: url("/pokeball.png");
+    background-image: url("./pokeball.png");
     background-position: center;
     background-repeat: no-repeat;
     background-color: black;
